public/style.css
body {
  font-family: Roboto, sans-serif;
  margin: 0px;
  background-color: #f6f9fe;
  min-width: 900px;
}

a {
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}
h1,
h2,
h3,
h4,
h5,
h5 {
  color: #4652b1;
}
label {
  display: block;
}

.button {
  margin: 15px;
}

.header {
  align-items: flex-start;
}
/* ------------------------
    NAV BAR
------------------------ */
#nav-outer-container {
  margin-bottom: 10px;
}
#navbar {
  display: flex;
  justify-content: space-between;
  color: black;
  align-items: center;
}

#navbar a {
  color: white;
}
#navWelcome {
  margin-left: 10px;
  font-family: 'Merriweather';
}
.navLinks {
  display: flex;
}
.navLinks a {
  margin: 0px 5px;
}
.nav-menu-links a {
  color: black;
}
#toolbar {
  margin-bottom: 30px;
}
/* ------------------------
    AUTH FORM
------------------------ */
.auth-form-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.auth-form {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.auth-form-google {
  margin: 20px;
}

#g-img {
  padding: 5px;
  width: 30px;
  height: 30px;
}

/* ------------------------
    USER PROFILE
------------------------ */
.user-profile-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.user-profile-form {
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* ------------------------
    Recording Screen
------------------------ */

.recording-screen {
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.recording-screen h1,
h3 {
  margin-block-start: 0.4em;
  margin-block-end: 0.4em;
}

.recording-buttons {
  display: flex;
}

.recording-buttons button {
  display: flex;
  margin: 5px;
}

#timer {
  font-size: 8em;
}
/* ------------------------
    ABOUT US
------------------------ */
#profile-container {
  padding: 30px;
}

.profile {
  display: flex;
  padding: 30px;
}

.profile-picture {
  height: 30%;
  width: 30%;
  padding: 20px;
}

.profile-details {
  padding: 20px;
}

.icon {
  height: 25px;
  width: 25px;
  margin-right: 15px;
}

/* ------------------------
    FOOTER
------------------------ */
#footer-container {
  display: flex;
  justify-content: center;
  width: 100%;
  height: 60px;
  position: relative;
  margin-top: auto;
  flex-shrink: 0;
}

#footer-details {
  display: flex;
}

.footer-link-details {
  align-items: center;
  margin: 10px;
}

#mainContainer {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  min-height: 100%;
}

.content {
  flex-grow: 1;
}

html,
body,
#app,
#app > div {
  height: 100%;
}

/* ------------------------
    Data Overviews
------------------------ */
.data-overview {
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
}

/* ------------------------
   Dashboard Item
------------------------ */

.dashboard-item {
  width: 900px;
  display: flex;
  margin: 15px;
}

.dashboard-chart {
  margin: auto;
  padding: 10px;
}

.svg-item {
  display: flex;
  align-content: center;
  justify-content: center;
}

.dashboard-item ol,
li {
  list-style-position: inside;
  text-align: center;
}
.dashboard-item ol > span {
  text-decoration: underline;
}
.dashboard-item ol > li {
  text-decoration: none;
}

.dashboard-item > * {
  margin: 10px;
  padding: 10px;
}
.dashboard-item-text {
  text-align: left;
}
#transcript-button {
  margin-top: 10px;
}

ol {
  text-align: left;
}
/* ------------------------
   About Podium / Home Page
------------------------ */

.about {
  display: flex;
  align-items: center;
  flex-direction: column;
  font-family: Roboto, sans-serif;
  font-weight: 300;
  color: #4652b1;
}

.about-header {
  display: flex;
  flex-direction: row;
  margin-bottom: 2%;
}

.about-tagline {
  font-weight: 700;
  font-size: xx-large;
  font-family: 'Merriweather';
  margin-bottom: 3%;
}

.about-title {
  display: flex;
  font-size: large;
  flex-direction: column;
  justify-content: center;
  margin-left: 6%;
}

.about-image {
  height: 49%;
  width: 49%;
}

.about-titles {
  font-size: x-large;
  font-weight: 600;
  font-family: 'Merriweather';
  margin: 3%;
}

.about-tiles {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

.about-text {
  text-align: center;
  font-weight: 300;
  color: #4652b1;
}

.tile-icon {
  height: 100px;
  width: 100px;
  margin-top: 10px;
  margin-bottom: 20px;
}

.about-tile {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.about-paper {
  height: 225px;
  width: 200px;
  margin: 10px;
  padding: 10px;
}

.team {
  display: flex;
  flex-direction: row;
  align-items: center;
  flex-wrap: wrap;
}

.team-card {
  width: 200px;
  margin: 10px;
}

.team-img {
  height: 200px;
  width: 200px;
}

.team-member {
  font-size: large;
  font-weight: 500;
  margin-bottom: 16px;
  color: #4652b1;
}

.tech-card {
  margin: 10px;
}

.tech-img {
  height: 140px;
  width: 140px;
  border: solid white 5px;
}

/* ------------------------
Error Page
------------------------ */

.error-page {
  display: flex;
  font-size: 12px;
}

.error-page h2 {
  margin-top: 8em;
  margin-right: 4em;
}

.error-img {
  width: 30%;
  height: auto;
  margin-left: 4em;
  padding: 3.3em;
}

/* ------------------------
   Sentiment
------------------------ */
.sentiment-rate-details {
  display: flex;
  padding: 8px;
  justify-content: stretch;
  align-items: center;
}

.sentiment-color-detail {
  align-items: center;
  margin-right: 10px;
}

